@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
 
+2008-11-16  Piotr Ożarowski
+	* fail if database requires newer Griffith version
+
 2008-11-15  Piotr Ożarowski
 	* Export plugins are now exporting movies listed in main window
 	* Replace "by ..." quick filter combo boxes with saved search conditions
